# gate_os_neo

./: GNUmakefile
kernel/: Cargo.toml  GNUmakefile  build.rs
kernel/src/: framebuffer.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/riscv64/: mod.rs
