[package]
name = "gateos-neo-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libm = "0.2.8"
spin = "0.9.8"
limine = "0.2.0"

[build-dependencies]
image = { version = "0.25.1", default-features = false, features = ["png"] }

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'